--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ h1, h2, h3, h4 {
 /* Individual cards and slots */
  
 #cardSlots div, #cardPile div {
-  width: 90%;
+  width: 95%;
   height: 7%;
   padding: 10px;
   margin-top: 40px;
@@ -84,7 +84,7 @@ h1, h2, h3, h4 {
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  margin: 0 0 0 10px;
+  margin: 3px 0 0 10px;
   background: #fff;
 }
  
