--- a/css/main.css
+++ b/css/main.css
@@ -154,8 +154,19 @@ h1, h2, h3, h4 {
 .correct {
 	cursor: default;
 }
-
-
+.topic a {
+  color: #398028;
+  font-weight: bold;
+}
+.disabled-icon {
+  color: #999;
+}
+.finished a {
+  color: #398028;
+}
+.finished-icon {
+  color: #FFBB00;
+}
 
 
 
