added progress bar and feedback

--- a/css/main.css
+++ b/css/main.css
@@ -123,25 +123,7 @@ h1, h2, h3, h4 {
 #card9.correct { background:  #8AE65C !important; }
 #card10.correct { background:  #8AE65C !important; }
  
- 
-/* "You did it!" message */
-#successMessage {
-  position: absolute;
-  left: 580px;
-  top: 250px;
-  width: 0;
-  height: 0;
-  z-index: 100;
-  background: #dfd;
-  border: 2px solid #333;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  -moz-box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-  -webkit-box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-  box-shadow: .3em .3em .5em rgba(0, 0, 0, .8);
-  padding: 20px;
-}
+
 /* Cursors */
 #cardPile div {
 	cursor: move;
@@ -170,9 +152,26 @@ h1, h2, h3, h4 {
 .finished-icon {
   color: #FFBB00;
 }
+#progressBar {
+  float:left;
+  width: 90%;
+  height: 22px;
+  border: 1px solid #111;
+  background-color: #ddd;
+}
+ 
+#progressBar div {
+  height: 100%;
+  color: #fff;
+  text-align: right;
+  line-height: 22px; /* same as #progressBar height if we want text middle aligned */
+  width: 0;
+  background-color: #428bca;
+}
 
-
-
+.finalScore {
+  text-align: center;
+}
 
 
 
