--- a/css/main.css
+++ b/css/main.css
@@ -142,8 +142,8 @@ h1, h2, h3, h4 {
 .topic a {
   color: #000;
   font-weight: bold;
-  opacity:0.3;
-  filter:alpha(opacity=30); /* For IE8 and earlier */
+  opacity:0.5;
+  filter:alpha(opacity=50); /* For IE8 and earlier */
 }
 .topic a:hover {
   color: #999;
@@ -151,13 +151,16 @@ h1, h2, h3, h4 {
   text-decoration: none;
   filter:alpha(opacity=100); /* For IE8 and earlier */
 }
-.disabled-icon {
-  color: #999;
-}
 .finished a {
   color: #398028;
 }
-.finished-icon {
+.ninja a {
+  color: #FFBB00;
+}
+.finished a:hover {
+  color: #398028;
+}
+.ninja a:hover {
   color: #FFBB00;
 }
 #progressBar {
